added swagger for auth
